...
                  hintText: 'Địa chỉ Email',
                  prefixIcon: Icons.email_outlined,
                  validator: Validators.validateEmail,
                  controller: _emailController),
              const SizedBox(height: 16),
              CustomTextField(
                  hintText: 'Mật khẩu',
                  prefixIcon: Icons.lock_outline,
                  isPassword: true,
                  validator: Validators.validatePassword,
                  controller: _passwordController),
              const SizedBox(height: 12),
              Align(
...
                          style: AppStyles.bodyMedium
                              .copyWith(color: AppColors.primary)))),
              const SizedBox(height: 24),
              Consumer<AuthProvider>(
                builder: (context, auth, child) {
                  return CustomButton(
                      text: 'Đăng nhập',
                      isLoading: auth.isLoading,
                      onPressed: _handleLogin);
                },
              ),
              const SizedBox(height: 24),
              Row(
...
